[package]
name = "depfirstsearch"
version = "0.1.3"
edition = "2024"
authors = ["Michael Clayton <mclayton@redhat.com>"]
description = "Keep your dependency tree small by searching for crates you may already have."
repository = "https://github.com/mwcz/depfirstsearch/tree/main"
license = "MIT"
keywords = ["dependency", "dependencies", "udeps"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
argh = "0.1.13"
regex = "1.11.1"
serde_json = "1.0.138"
termion = { version = "4.0.3", default-features = false }

[profile.release]
# debug = true
codegen-units = 1
lto = "fat"
